@@ -80,9 +80,11 @@ cdl_package CYGPKG_HAL_CORTEXM_KINETIS_TWR_K70F120M {
                     CYGNUM_DEVS_KINETIS_FLASH_LONGWORD_SIZE == 8 }
 
     implements    CYGINT_IO_SERIAL_FREESCALE_UART2
-
+    implements    CYGINT_IO_FREESCALE_I2C0
+    
     implements    CYGINT_HAL_FREESCALE_UART2
     implements    CYGINT_HAL_CORTEXM_KINETIS_RTC
+    
     implements    CYGINT_HAL_CORTEXM_KINETIS_HAS_PLL1
     implements    CYGINT_HAL_CORTEXM_KINETIS_HAS_OSC1
     implements    CYGINT_HAL_CORTEXM_KINETIS_150
